# rysq

./: CMakeLists.txt  README.md
src/rysq/: CMakeLists.txt  config.h  constants.h  kernel.cc  kernel.tcc  memory.h  roots.h  rysq.cc  rysq.h  shell.h  stieltjes.h  timings.cc  validate.cc  vector.h
src/rysq/cuda/: CMakeLists.txt  kernel.cu
src/rysq/roots/: roots.h  stieltjes.h
